2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (prologdir): Change texmf => texmf-dist.

2013-01-21  Karl Berry  <karl@tug.org>

	* test-dvips: rename from dvips.test, to avoid new Automake 1.13
	make check failure, since it can't create dvips.log in the
	event that dvips.log already exists (from running dvips.texi).
	Even though one is in the srcdir and one in the builddir ...
	Use test-dvips rather than dvips-test just to help filename completion.
	* Makefile.am (TESTS): rename.

2013-01-18  Karl Berry  <karl@tug.org>

	* writet1.c: apply diffs (cast removals) from pdftex.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* squeeze/Makefile.am: Enable silent rules.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* finclude.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexmac.h: Drop unused definition of M_PI & Co.

2012-04-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvips.c: do not free getenved string.

2012-03-30  Norbert Preining  <preining@logic.at>

	* resident.c: add new directive "c<filename> to config files, allowing
	to include other config files.
	* dvips.texi: document it.
	* contrib/config.proto: add example.
	 
2012-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Fixed a typo (in comment).

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-20  Werner Fink <werner@suse.de>

	* dospecial.c (fgetboundingbox): Increase `buf' size to avoid
	overrun.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST, DISTCLEANFILES): Make sure that
	'make distclean' removes all generated files.

2011-07-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bbox.c, dopage.c, dvips.c, pprescan.c, scanpage.c, dvips.1,